--- a/styles/index.css
+++ b/styles/index.css
@@ -24,25 +24,25 @@
 
 :root {
   --bg-color-white: #fff;
-  --bg-color-grey: #E7E6E6;
-  --bg-color-footer: #4C5866;
-  --bg-color-footer-white: #EBEBEB;
+  --bg-color-grey: #e7e6e6;
+  --bg-color-footer: #4c5866;
+  --bg-color-footer-white: #ebebeb;
   --title-color: #666;
   --text-color-light: #b5b5bd;
-  --text-color-grey: #4C5866;
-  --text-color-white: #FFFFFF;
+  --text-color-grey: #4c5866;
+  --text-color-white: #ffffff;
   --text-color-purple: #7875fe;
-  --icon-color: #4C5866;
-  --text-footer: #BCBCBC;
+  --icon-color: #4c5866;
+  --text-footer: #bcbcbc;
   --text-color-dark: #85859b;
   --line-header-color: #ddd;
-  --line-color: #C0C0C0;
+  --line-color: #c0c0c0;
   --btn-color: #7875fe;
   --link-color: #7875fe;
-  --border-color: #C4C4C4;
+  --border-color: #c4c4c4;
   --btn-hover-color: #7875fe;
-  --btn-focus-bg-color: #DAD9FB;
-  --btn-active-color: #4946B4;
+  --btn-focus-bg-color: #dad9fb;
+  --btn-active-color: #4946b4;
 }
 
 * {
@@ -53,11 +53,12 @@
 }
 
 body {
-  font-family: 'Roboto', sans-serif;;
+  font-family: 'Roboto', sans-serif;
   color: var(--text-color-dark);
   background-color: var(--bg-color-white);
   font-weight: 400;
   font-size: 18px;
+  overflow-x: auto;
 }
 
 button {
@@ -79,7 +80,6 @@ a {
   padding: 0 30px;
 }
 
-
 .header {
   padding: 28px 0;
   background-color: var(--bg-color-white);
@@ -91,19 +91,82 @@ a {
   justify-content: space-between;
 }
 
+.header_logo {
+  height: 22px;
+}
+
 .header_wrapper {
   display: flex;
-  gap: 60px;
+}
+
+.header_burger {
+  display: none;
+  flex-direction: column;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.header_burger div {
+  width: 21px;
+  height: 2px;
+  background-color: #4c5866;
+  margin-bottom: 5px;
+}
+
+.header_burger div:last-child {
+  margin-bottom: 0;
+}
+
+.menu_bottom {
+  display: none;
+}
+
+.header_btns {
+  display: flex;
+  gap: 30px;
+}
+
+.header_btns_bottom {
+  display: none;
+}
+
+.header_nav {
+  margin-right: 60px;
+  height: 24px;
 }
 
 .nav_list {
-  display: flex;
-  gap: 60px;
+  height: 100%;
 }
 
 .nav_link {
-  padding: 0 5px;
   color: var(--text-color-grey);
+}
+
+.nav_item {
+  margin-right: 60px;
+  font-size: 20px;
+  font-weight: 400;
+}
+
+.header_nav_tablet {
+  width: 100%;
+}
+
+.header_nav_tablet .nav_list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header_nav_tablet .nav_item {
+  margin-right: 0;
+}
+
+.nav_item:last-child {
+  margin-right: 0;
 }
 
 .nav_link:hover {
@@ -121,13 +184,12 @@ a {
   background: none;
 }
 
-.header_btns {
-  display: flex;
-  gap: 30px;
-}
-
 .header_btn {
   cursor: pointer;
+}
+
+.header_btn:last-child {
+  margin-right: 0;
 }
 
 .header_btn svg {
@@ -147,11 +209,18 @@ a {
 }
 
 .header_btn:active {
-    background: none;
+  background: none;
 }
 
 .header_btn:active svg {
   stroke: var(--btn-active-color);
+}
+
+.nav_tablet_container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .hero {
@@ -159,27 +228,27 @@ a {
 }
 
 .hero_wrapper {
-  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  gap: 10px;
 }
 
 .hero_wrapper::after {
   content: '';
-  width: 49%;
-  height: 100%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  background-image: url(../images/hero-image.png);
+  width: 540px;
+  height: 560px;
+  background-image: url('../images/hero-image.png');
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: bottom right;
   background-size: contain;
 }
 
 .hero_content {
   max-width: 445px;
-  padding: 70px 0 130px;
   position: relative;
   z-index: 2;
+  margin-bottom: 130px;
 }
 
 .hero_title {
@@ -276,6 +345,20 @@ a {
   gap: 30px;
 }
 
+.info_descr::before {
+  content: '';
+  background-image: url('../images/info-folder.png');
+  background-repeat: no-repeat;
+  display: block;
+  width: 730px;
+  height: 564px;
+  max-width: 100%;
+}
+
+.info_descr_content {
+  max-width: 350px;
+}
+
 .info_descr_title {
   font-size: 40px;
   font-weight: 400;
@@ -308,6 +391,7 @@ a {
 
 .products_item_img {
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .products_item_title {
@@ -353,7 +437,6 @@ a {
   transition: all 0.3s;
 }
 
-
 .products_item_link svg {
   fill: var(--link-color);
   width: 21px;
@@ -367,7 +450,7 @@ a {
   fill: var(--btn-active-color);
 }
 
-.products_item_link:focus{
+.products_item_link:focus {
   color: var(--btn-active-color);
   background: var(--btn-focus-bg-color);
 }
@@ -380,7 +463,7 @@ a {
   display: flex;
   gap: 5px;
   background: none;
-  color: var(--btn-active-color)
+  color: var(--btn-active-color);
 }
 
 .products_item_link:active:after {
@@ -397,22 +480,24 @@ a {
 }
 
 .partners_list {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  display: flex;
+  justify-content: space-between;
   gap: 30px;
 }
 
 .partner_item {
+  width: 255px;
+  height: 135px;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 40px 29px;
+  padding: 8px 24px;
   border: 1px solid var(--border-color);
   transition: all 0.6s;
 }
 
 .partner_item:hover {
-  background-color: var(--bg-color-white)
+  background-color: var(--bg-color-white);
 }
 
 .sketchbook {
@@ -430,7 +515,7 @@ a {
 }
 
 .sketchbook_wrapper:after {
-  content: "";
+  content: '';
   background-image: url('../images/sketchbook.png');
   background-repeat: no-repeat;
   width: 66%;
@@ -489,9 +574,8 @@ a {
   outline: none;
 }
 
-
 .social_link:focus svg {
-  fill: #DAD9FB;
+  fill: #dad9fb;
 }
 
 .social_link:focus svg rect {
@@ -522,4 +606,425 @@ a {
 
 .footer_copy span {
   color: var(--text-footer);
+}
+
+@media (max-width: 1169px) {
+  .header {
+    padding: 11px 0 20px;
+  }
+
+  .header_container {
+    margin-bottom: 11px;
+  }
+
+  .header_logo {
+    margin-right: 0;
+  }
+
+  .header_nav {
+    display: none;
+  }
+
+  .menu_bottom {
+    padding-top: 18px;
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid var(--line-header-color);
+  }
+
+  .hero {
+    padding-top: 65px;
+  }
+
+  .hero_content {
+    max-width: 390px;
+    margin-bottom: 65px;
+  }
+
+  .hero_title {
+    font-size: 50px;
+  }
+
+  .hero_wrapper::after {
+    background-image: url('../images/hero-image-tablet.png');
+    width: 270px;
+    height: 405px;
+  }
+
+  .info {
+    padding: 60px 0;
+  }
+
+  .info_list {
+    justify-content: space-between;
+  }
+
+  .info_item {
+    flex-direction: column;
+    align-items: start;
+    min-width: 30%;
+    gap: 0;
+  }
+
+  .info_descr {
+    align-items: start;
+    justify-content: space-between;
+  }
+
+  .info_container {
+    gap: 40px;
+  }
+
+  .info_descr::before {
+    background-size: contain;
+    width: 492px;
+    height: 379px;
+  }
+
+  .info_descr_content {
+    max-width: 47.8%;
+  }
+
+  .products {
+    padding: 60px 0;
+  }
+
+  .products_cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .partners {
+    padding: 60px 0;
+  }
+
+  .partner_item {
+    width: 22%;
+    height: 80px;
+  }
+
+  .sketchbook {
+    position: relative;
+    padding-top: 60px;
+  }
+
+  .sketchbook_content {
+    padding: 0 0 60px 0;
+    max-width: 50%;
+  }
+
+  .sketchbook_wrapper:after {
+    position: absolute;
+    background-image: url('../images/sketchbook-tablet.png');
+    bottom: 0;
+    right: 0;
+    width: 369px;
+    height: 334px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 0 39px;
+  }
+
+  .hero_wrapper {
+    gap: 20px;
+  }
+
+  .hero_content {
+    width: 50%;
+  }
+
+  .info_descr_container {
+    max-width: 50%;
+  }
+
+  .info_descr_title {
+    font-size: 30px;
+  }
+
+  .info_descr_text {
+    margin-bottom: 18px;
+  }
+
+  .sketchbook_wrapper:after {
+    width: 45%;
+  }
+
+  .sketchbook_title {
+    font-size: 30px;
+  }
+
+  .partner_item {
+    width: 20%;
+  }
+}
+
+@media (max-width: 576px) {
+  .container {
+    padding: 0 33px;
+  }
+
+  .header {
+    padding: 11px 0 20px;
+  }
+
+  .nav_tablet_container {
+    width: 100%;
+  }
+
+  .nav_list {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .nav_item {
+    margin-right: 0;
+  }
+
+  .hero {
+    padding-top: 20px;
+  }
+
+  .hero_wrapper::after {
+    background-image: url('../images/hero-image-tablet-510.png');
+  }
+
+  .hero_content {
+    width: 70%;
+    padding-top: 40px;
+  }
+
+  .hero_title {
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+
+  .hero_text {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
+  .btn {
+    width: 196px;
+    height: 60px;
+    padding: 20px 50px;
+  }
+
+  .info_item {
+    min-width: 29%;
+  }
+
+  .info_item img {
+    width: 150px;
+  }
+
+  .info_content_title {
+    font-size: 16px;
+  }
+
+  .info_content_text {
+    font-size: 16px;
+  }
+
+  .info_descr {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .info_descr_content {
+    max-width: 100%;
+  }
+
+  .info_descr_title {
+    font-size: 24px;
+    margin-bottom: 14px;
+  }
+
+  .info_descr_text {
+    font-size: 16px;
+  }
+
+  .products_item_title {
+    font-size: 24px;
+    margin-bottom: 4px;
+  }
+
+  .products_item_curculation {
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+
+  .products_item_description {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+
+  .partners_list {
+    flex-wrap: wrap;
+  }
+
+  .partner_item {
+    height: 127px;
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 47%;
+  }
+
+  .sketchbook_wrapper {
+    flex-direction: column-reverse;
+    gap: 10px;
+  }
+
+  .sketchbook_wrapper:after {
+    width: 100%;
+    background-image: url('../images/sketchbook-tablet-510.png');
+    height: 342px;
+    position: static;
+  }
+
+  .sketchbook_content {
+    max-width: 100%;
+  }
+
+  .sketchbook_title {
+    font-size: 24px;
+    margin-bottom: 20px;
+  }
+
+  .sketchbook_text {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 520px) {
+  .container {
+    padding: 0 33px;
+  }
+
+  .header_container {
+    justify-content: center;
+  }
+  .header_nav_tablet {
+    display: none;
+  }
+
+  .header_burger {
+    display: flex;
+  }
+
+  .header_btns {
+    display: none;
+  }
+
+  .header_btns_bottom {
+    display: flex;
+  }
+
+  .hero_wrapper::after {
+    display: none;
+  }
+
+  .hero_content {
+    width: 100%;
+  }
+
+  .info_list {
+    flex-direction: column;
+  }
+
+  .info_item {
+    align-items: center;
+  }
+
+  .products_cards {
+    grid-template-columns: 1fr;
+  }
+
+  .partners_list {
+    flex-wrap: nowrap;
+    overflow: auto;
+  }
+
+  .partners_list::-webkit-scrollbar {
+    display: none;
+  }
+
+  .partner_item {
+    width: 150px;
+    height: 80px;
+  }
+
+  .footer_top_container {
+    flex-direction: column;
+  }
+
+  .footer_logo {
+    margin-bottom: 20px;
+  }
+
+  .socials_list {
+    padding-top: 20px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .socials_list {
+    border-top: 1px solid var(--line-color);
+  }
+}
+
+@media (max-width: 320px) {
+  .container {
+    padding: 0 15px;
+  }
+
+  .header {
+    padding: 11px 0 15px;
+  }
+
+  .menu_bottom {
+    padding-top: 15px;
+  }
+
+  .hero {
+    padding-top: 49px;
+  }
+
+  .hero_content {
+    padding-top: 0;
+    margin-bottom: 49px;
+  }
+
+  .info_item {
+    flex-direction: row;
+    gap: 30px;
+  }
+
+  .info_item img {
+    width: 130px;
+  }
+
+  .info_container {
+    gap: 60px;
+  }
+
+  .info_descr::before {
+    width: 290px;
+    height: 223px;
+    margin-bottom: 20px;
+  }
+
+  .products_cards {
+    gap: 60px;
+  }
+
+  .sketchbook_wrapper:after {
+    height: 221px;
+    width: 290px;
+  }
+
+  .sketchbook_wrapper {
+    gap: 0;
+  }
 }
