--- a/styles/index.css
+++ b/styles/index.css
@@ -61,6 +61,11 @@ body {
   overflow-x: auto;
 }
 
+.body_off-scroll {
+  height: 100%;
+  overflow: hidden;
+}
+
 button {
   background: none;
 }
@@ -89,6 +94,7 @@ a {
 .header_container {
   display: flex;
   justify-content: space-between;
+  position: relative;
 }
 
 .header_logo {
@@ -106,6 +112,8 @@ a {
   height: 30px;
   justify-content: center;
   align-items: center;
+  z-index: 21;
+  padding: 5px;
 }
 
 .header_burger div {
@@ -113,6 +121,21 @@ a {
   height: 2px;
   background-color: #4c5866;
   margin-bottom: 5px;
+  transition: all 0.6s;
+}
+
+.header_burger.active div:nth-child(1) {
+  transform: rotate(-45deg);
+  margin-bottom: 0;
+}
+.header_burger.active div:nth-child(3) {
+  transform: rotate(45deg);
+  margin-top: -2px;
+}
+
+.header_burger.active div:nth-child(2) {
+  display: none;
+  margin-bottom: 0;
 }
 
 .header_burger div:last-child {
@@ -214,6 +237,34 @@ a {
 
 .header_btn:active svg {
   stroke: var(--btn-active-color);
+}
+
+.header_mobile_menu {
+  display: none;
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background: var(--bg-color-grey);
+  z-index: 20;
+}
+
+.header_mobile_menu.active {
+  display: block;
+}
+
+.header_nav_mobile {
+  padding-top: 67px;
+}
+
+.header_nav_mobile .nav_list {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 50px;
+}
+
+.header_nav_mobile .nav_link {
+  font-size: 18px;
 }
 
 .nav_tablet_container {
@@ -935,6 +986,12 @@ a {
 
   .info_item {
     align-items: center;
+  }
+
+  .info_descr::before {
+    width: 100%;
+    height: 223px;
+    background-position: center;
   }
 
   .products_cards {
