--- a/styles/index.css
+++ b/styles/index.css
@@ -52,6 +52,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--text-color-dark);
